Fix list import conflict in the test.